--- a/index.html
+++ b/index.html
@@ -238,14 +238,15 @@
   const ASSET = (p) => `assets/${p}`;
 
   const DATA = [
-    { key:"goose",  singular:"goose",  plural:"geese",  img1:ASSET("goose_1.png"),  img3:ASSET("goose_3.png") },
-    { key:"sheep",  singular:"sheep",  plural:"sheep",  img1:ASSET("sheep_1.png"),  img3:ASSET("sheep_3.png") },
-    { key:"deer",   singular:"deer",   plural:"deer",   img1:ASSET("deer_1.png"),   img3:ASSET("deer_3.png") },
-    { key:"fish",   singular:"fish",   plural:"fish",   img1:ASSET("fish_1.png"),   img3:ASSET("fish_3.png") },
-    { key:"mouse",  singular:"mouse",  plural:"mice",   img1:ASSET("mouse_1.png"),  img3:ASSET("mouse_3.png") },
-    { key:"man",    singular:"man",    plural:"men",    img1:ASSET("man_1.png"),    img3:ASSET("man_3.png") },
-    { key:"woman",  singular:"woman",  plural:"women",  img1:ASSET("woman_1.png"),  img3:ASSET("woman_3.png") },
-  ];
+  { key:"goose",  singular:"goose",  plural:"geese",  img1:ASSET("goose_1.png"),  img3:ASSET("geese_3.png") },
+  { key:"sheep",  singular:"sheep",  plural:"sheep",  img1:ASSET("sheep_1.png"),  img3:ASSET("sheep_3.png") },
+  { key:"deer",   singular:"deer",   plural:"deer",   img1:ASSET("deer_1.png"),   img3:ASSET("deer_3.png") },
+  { key:"fish",   singular:"fish",   plural:"fish",   img1:ASSET("fish_1.png"),   img3:ASSET("fish_3.png") },
+  { key:"mouse",  singular:"mouse",  plural:"mice",   img1:ASSET("mouse_1.png"),  img3:ASSET("mice_3.png") },
+  { key:"man",    singular:"man",    plural:"men",    img1:ASSET("man_1.png"),    img3:ASSET("men_3.png") },
+  { key:"woman",  singular:"woman",  plural:"women",  img1:ASSET("woman_1.png"),  img3:ASSET("women_3.png") },
+];
+
 
   const LEVELS = [
     { id:1, name:"🟢 обучающий", color:"var(--good)",  bubbles:10, speed:0.60, goal:10, timerSec:0,  mode:"word",     showText:true  },
